--- a/_Code/AhyangyiMaps.csproj
+++ b/_Code/AhyangyiMaps.csproj
@@ -26,8 +26,8 @@
     <OutputPath>..\ModdableLogicDLLs\</OutputPath>
   </PropertyGroup>
   <ItemGroup>
-    <!--<Compile Include="Logger.cs" />-->
     <Compile Include="FractalTypeGenerator.cs" />
+    <Compile Include="TessellationTypeGenerator.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(AIW2Root)\XmlMods\Base.props" />
