--- a/_Code/AhyangyiMaps.csproj
+++ b/_Code/AhyangyiMaps.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Tessellation\DiamondYGrid.cs" />
     <Compile Include="Tessellation\DiamondYFlowerGrid.cs" />
     <Compile Include="GalaxyTypeGenerator.cs" />
+    <Compile Include="TableGen.cs" />
     <ExtraContent Include="..\MapType\MapTypes.xml" />
   </ItemGroup>
   <ItemGroup>
