--- a/_Code/AhyangyiMaps.csproj
+++ b/_Code/AhyangyiMaps.csproj
@@ -37,6 +37,7 @@
     <Compile Include="Tessellation\SquareYMirrorGrid.cs" />
     <Compile Include="Tessellation\DiamondYGrid.cs" />
     <Compile Include="Tessellation\DiamondYFlowerGrid.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable.cs" />
     <Compile Include="GalaxyTypeGenerator.cs" />
     <Compile Include="TableGen.cs" />
     <ExtraContent Include="..\MapType\MapTypes.xml" />
