--- a/_Code/AhyangyiMaps.csproj
+++ b/_Code/AhyangyiMaps.csproj
@@ -42,6 +42,14 @@
     <Compile Include="Tessellation\Generated\SquareGridTable150.cs" />
     <Compile Include="Tessellation\Generated\SquareGridTable200.cs" />
     <Compile Include="Tessellation\Generated\SquareGridTable250.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable300.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable350.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable400.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable450.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable500.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable600.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable700.cs" />
+    <Compile Include="Tessellation\Generated\SquareGridTable800.cs" />
     <Compile Include="Tessellation\Generated\SquareGridTable10000.cs" />
     <Compile Include="Tessellation\Generated\SquareGridTable10001.cs" />
     <Compile Include="Tessellation\Generated\SquareGridTable10002.cs" />
