(tes) First working version for the new tablegen.

--- a/_Code/TableGen.csproj
+++ b/_Code/TableGen.csproj
@@ -43,6 +43,7 @@
     <Compile Include="GalaxyTypeGenerator.cs" />
     <Compile Include="TableGen.cs" />
     <ExtraContent Include="..\MapType\MapTypes.xml" />
+    <ExtraContent Include="..\ExternalConstants\TessellationLookup.xml" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="system" />
